CSRF token added to forms

--- a/Critter/src/main/webapp/WEB-INF/web.xml
+++ b/Critter/src/main/webapp/WEB-INF/web.xml
@@ -51,6 +51,16 @@
   	<servlet-name>springmvc</servlet-name>
   </filter-mapping>
   
+  <filter>
+  	<filter-name>csrfFilter</filter-name>
+  	<filter-class>com.techelevator.critter.security.CSRFFilter</filter-class>
+  </filter>
+  
+  <filter-mapping>
+  	<filter-name>csrfFilter</filter-name>
+  	<servlet-name>springmvc</servlet-name>
+  </filter-mapping>
+  
 </web-app>
 
 
